# sea-of-fortune

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
client1/: Cargo.toml
client1/src/: main.rs
client1/src/boat/: systems.rs
client1/src/network/: components.rs
project_code/: Cargo.toml  camera.rs
project_code/src/: components.rs  controls.rs  enemies.rs  main.rs  systems.rs  transition_box.rs
project_code/src/bat/: components.rs  mod.rs  movement.rs  systems.rs
project_code/src/boat/: components.rs  mod.rs  systems.rs
project_code/src/boss/: components.rs  mod.rs  systems.rs
project_code/src/data/: gameworld_data.rs
project_code/src/ghost_ship/: components.rs  mod.rs  systems.rs
project_code/src/hitbox_system/: components.rs  mod.rs  systems.rs
project_code/src/hud/: components.rs  mod.rs  systems.rs
project_code/src/kraken/: components.rs  mod.rs  systems.rs
project_code/src/level/: components.rs  mod.rs  systems.rs
project_code/src/network/: components.rs  main.rs  mod.rs  systems.rs
project_code/src/player/: components.rs  controls.rs  mod.rs  systems.rs
project_code/src/poison_skeleton/: components.rs  mod.rs  systems.rs
project_code/src/rock/: components.rs  mod.rs  systems.rs
project_code/src/shop/: components.rs  mod.rs  systems.rs
project_code/src/skeleton/: components.rs  mod.rs  systems.rs
project_code/src/storm/: components.rs  mod.rs  systems.rs
project_code/src/wfc/: components.rs  mod.rs  systems.rs
project_code/src/whirlpool/: components.rs  mod.rs  systems.rs
project_code/src/wind/: components.rs  mod.rs  systems.rs
server/: Cargo.toml
server/src/: main.rs
server/src/data/: gameworld_data.rs  mod.rs
server/src/level/: components.rs  mod.rs  systems.rs
server/src/network/: archive.txt  components.rs  systems.rs
(+8 files in other folders)
