[package]
name = "server"
authors = ["Zac", "Mark", "Theo"]
version = "0.1.0"
edition = "2021"

# Apply basic optimiations to our code in dev builds
[profile.dev]
opt-level = 1

# Apply all optimiations to dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking", "bevy_gizmos"]}
rand = "0.8.5"
flexbuffers = "2.0.0"
project_code = { path = "../project_code" }